[tool.poetry]
name = "mtg-price-history"
version = "0.1.0"
description = ""
authors = ["Eddie Kunkel <edward.pk94@gmail.com>"]
readme = "README.md"
packages = [{include = "mtg_price_history"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.5.2"
seaborn = "^0.12.1"
jupyter = "^1.0.0"
ipykernel = "^6.19.2"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
selenium = "^4.7.2"
regex = "^2022.10.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
